add wordcloud endpoint
